cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Part 1 - Build a webapp stack with CloudFormation

Resources:
  WebAppInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0d5eff06f840b45e9 # ImageID valid only in us-east-1 region
      InstanceType: t2.micro
      KeyName: alikey
      SecurityGroupIds:
        - !Ref WebAppSecurityGroup
      Tags:
        - Key: Name
          Value: My EC2 Instance
        - Key: Owner
          Value: ali
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo su
          yum update -y
          yum install httpd.x86_64 -y
          systemctl start httpd.service
          systemctl enable httpd.service
          yum install git -y
          git clone https://github.com/alisametsari/project_101.git
          sudo mv /project_101/index.html /var/www/html/
          sudo mv /project_101/cat0.jpg /var/www/html/
          sudo mv /project_101/cat1.jpg /var/www/html/
          sudo mv /project_101/cat2.jpg /var/www/html/
          sudo mv /project_101/cat3.png /var/www/html/

  WebAppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["-", [webapp-security-group, dev]]
      GroupDescription: "Allow HTTP/HTTPS and SSH inbound and outbound traffic"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
